# Android-Project

Testing-CalVR/app/: CMakeLists-arBasic.txt  CMakeLists-buildCalVR.txt  CMakeLists-buildCalVR_plugin.txt  CMakeLists-buildFreetype.txt  CMakeLists-buildMXML.txt  CMakeLists-buildOSG.txt  CMakeLists-dependencies.txt  CMakeLists-simpleCalVR.txt  CMakeLists-staticCalVR.txt  CMakeLists-staticFreetype.txt  CMakeLists-staticMXML.txt  CMakeLists-staticOSG.txt  CMakeLists-staticPhysX.txt  CMakeLists.txt  build.gradle
Testing-CalVR/app/src/androidTest/java/com/example/kroth/testing/: ExampleInstrumentedTest.java
Testing-CalVR/app/src/main/: AndroidManifest.xml
Testing-CalVR/app/src/main/assets/shaders/: backgroundText.frag  basicOSG.frag  basicOSG.vert  lightingOSG.vert  osgObject.frag  osgObject.vert  plane.vert  pointDrawable.vert
Testing-CalVR/app/src/main/cpp/: SpatialViz.cpp  SpatialViz.h  ar_application.cpp  ar_application.h  arcore_c_api.h  backgroundDrawable.cpp  backgroundDrawable.h  background_renderer.h  calvr_application.cpp  calvr_application.h  glDrawable.cpp  jni_interface.cpp  jni_interface.h  jni_interface_calvr.cpp  jni_interface_calvr.h  jni_interface_osg.cpp  jni_interface_osg.h  osg_application.cpp  osg_application.h  osg_objRenderer.cpp  osg_objRenderer.h  osg_utils.cpp  osg_utils.h  planeDrawable.cpp  planeDrawable.h  pointCloudDrawable.cpp  pointCloudDrawable.h  util.cpp
Testing-CalVR/app/src/main/java/com/example/kroth/testing/: CalVR_Activity.java  JniInterfaceCalVR.java  JniInterfaceOSG.java  MainActivity.java  MultiFingerTapDetector.java  OSG_Activity.java  fileUtils.java
Testing-CalVR/app/src/main/res/layout/: activity_cal_vr.xml
Testing-CalVR/app/src/main/res/menu/: calvr_menu.xml  menu.xml
Testing-CalVR/app/src/main/res/values/: strings.xml
Testing-CalVR/app/src/test/java/com/example/kroth/testing/: ExampleUnitTest.java
Testing-CalVR/gradle/wrapper/: gradle-wrapper.properties
Testing/app/: CMakeLists-arBasic.txt  CMakeLists-buildCalVR.txt  CMakeLists-buildCalVR_plugin.txt  CMakeLists-buildFreetype.txt  CMakeLists-buildMXML.txt  CMakeLists-buildOSG.txt  CMakeLists-dependencies.txt  CMakeLists-simpleCalVR.txt  CMakeLists-staticCalVR.txt  CMakeLists-staticFreetype.txt  CMakeLists-staticMXML.txt  CMakeLists-staticOSG.txt  CMakeLists.txt
Testing/app/src/main/: AndroidManifest.xml
Testing/app/src/main/assets/shaders/: lightingOSG.frag
Testing/app/src/main/cpp/: ar_application.cpp  ar_application.h  background_renderer.cpp  glDrawable.h  jni_interface_calvr.cpp  jni_interface_osg.h  osg_application.cpp  osg_application.h  osg_background.cpp  osg_background.h  util.cpp  util.h
Testing/app/src/main/java/com/example/kroth/testing/: CalVR_Activity.java  CameraPermissionHelper.java  JniInterface.java
Testing/app/src/main/res/layout/: activity_main.xml  activity_osg.xml
